--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           IMAGE_TAG=${GITHUB_SHA::7}
-          docker build -t $ECR_REPO_NAME:$IMAGE_TAG .
+          docker build -t $ECR_REPO_NAME:$IMAGE_TAG ./strapi-deploy
           docker tag $ECR_REPO_NAME:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO_NAME:$IMAGE_TAG
           docker tag $ECR_REPO_NAME:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO_NAME:latest
           docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO_NAME:$IMAGE_TAG
