--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,17 @@
-name: CI - Build and Push Image
-
+name: CI-Build-Push-Image-KG
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 env:
   AWS_REGION: us-east-2
-  ECR_REPO_NAME: strapi-ecs
+  ECR_REPO_NAME: strapi-ecs-kg
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    outputs:
-      image_tag: ${{ steps.export-tag.outputs.image_tag }}
-
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Configure AWS Credentials
@@ -33,12 +27,8 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          IMAGE_TAG=${GITHUB_SHA::7}
+          IMAGE_TAG=latest
           docker build -t $ECR_REPO_NAME:$IMAGE_TAG .
           docker tag $ECR_REPO_NAME:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO_NAME:$IMAGE_TAG
-          docker tag $ECR_REPO_NAME:$IMAGE_TAG ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO_NAME:latest
           docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO_NAME:$IMAGE_TAG
-          docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPO_NAME:latest
-          echo "image_tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-        id: export-tag
 
