--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,38 +1,40 @@
-name: CD - Terraform Deploy
-
+name: CD-Deploy-Terraform-KG
 on:
   workflow_run:
-    workflows: ["CI - Build and Push Image"]
-    types:
-      - completed
-
-env:
-  AWS_REGION: us-east-2
+    workflows: ["CI-Build-Push-Image-KG"]
+    types: [completed]
 
 jobs:
-  terraform:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set IMAGE_TAG from CI output
-        run: echo "IMAGE_TAG=${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.outputs.image_tag || 'latest' }}" >> $GITHUB_ENV
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-2
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.9.0
 
       - name: Terraform Init
-        run: terraform -chdir=terraform init
+        run: cd terraformA && terraform init
+
+      - name: Terraform Fmt
+        run: cd terraformA && terraform fmt -check
+
+      - name: Terraform Validate
+        run: cd terraformA && terraform validate
+
+      - name: Terraform Plan
+        run: cd terraformA && terraform plan -out=tfplan
 
       - name: Terraform Apply
-        run: terraform -chdir=terraform apply -auto-approve -var="image_tag=${{ env.IMAGE_TAG }}"
+        run: cd terraformA && terraform apply -auto-approve tfplan
 
