Test GitHub Actions Terraform deploy

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,40 +1,12 @@
-name: CD-Deploy-Terraform-KG
 on:
   workflow_run:
     workflows: ["CI-Build-Push-Image-KG"]
-    types: [completed]
-
+    types:
+      - completed
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.9.0
-
-      - name: Terraform Init
-        run: cd terraformA && terraform init
-
-      - name: Terraform Fmt
-        run: cd terraformA && terraform fmt -check
-
-      - name: Terraform Validate
-        run: cd terraformA && terraform validate
-
-      - name: Terraform Plan
-        run: cd terraformA && terraform plan -out=tfplan
-
-      - name: Terraform Apply
-        run: cd terraformA && terraform apply -auto-approve tfplan
+      ...
 
