--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: CI-Build-Push-Image-KG
+
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+  workflow_dispatch:  # Allow manual trigger
 
 env:
   AWS_REGION: us-east-2
