--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,10 +5,11 @@ on:
     workflows: ["CI-Build-Push-Image-KG"]
     types:
       - completed
+  workflow_dispatch:  # Allow manual trigger
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
