--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,38 +1,49 @@
-name: CD-Deploy-Terraform-KG
+name: Terraform Apply (Strapi Siya Infra)
 
 on:
-  workflow_run:
-    workflows: ["CI-Build-Push-Image-KG"]
-    types:
-      - completed
-  workflow_dispatch:  # Manual trigger for CD
+  push:
+    branches:
+      - main
+    paths:
+      - 'terraform-strapi-siya/**'
+
+env:
+  AWS_REGION: us-east-2
 
 jobs:
-  deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
+  terraform:
+    name: Terraform Apply
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials
+    defaults:
+      run:
+        working-directory: terraform-strapi-siya
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: ${{ env.AWS_REGION }}
 
-      - name: Setup Terraform
+      - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.9.0
+          terraform_version: 1.6.6
 
       - name: Terraform Init
-        run: cd terraform-blue-green-dep && terraform init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
 
       - name: Terraform Plan
-        run: cd terraform-blue-green-dep && terraform plan -out=tfplan
+        run: terraform plan
 
-      - name: Terraform Apply
-        run: cd terraform-blue-green-dep && terraform apply -auto-approve tfplan
+      - name: Terraform Apply (auto-approved)
+        run: terraform apply -auto-approve
 
