--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,55 @@
-- name: Create CodeDeploy Deployment
-  id: deploy_cd
-  env:
-    TASK_DEF_ARN: ${{ steps.register_taskdef.outputs.taskDefinitionArn }}
-    CODEDEPLOY_APP: strapi-cd-app-siya
-    CODEDEPLOY_DEPLOYMENT_GROUP: strapi-cd-dg-siya
-  run: |
-    echo "Generating AppSpec content..."
+name: Deploy Strapi to ECS (Blue/Green)
 
-    APPSPEC=$(jq -n --arg taskDef "$TASK_DEF_ARN" '
-    {
-      revisionType: "AppSpecContent",
-      appSpecContent: {
-        content: "version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: \"" + $taskDef + "\"\n        LoadBalancerInfo:\n          ContainerName: \"strapi\"\n          ContainerPort: 1337"
-      }
-    }')
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
-    echo "AppSpec JSON:"
-    echo "$APPSPEC"
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-    DEPLOYMENT_ID=$(aws deploy create-deployment \
-      --application-name "$CODEDEPLOY_APP" \
-      --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-      --cli-input-json "$APPSPEC" \
-      --region us-east-2 \
-      --query "deploymentId" --output text)
+    env:
+      AWS_REGION: us-east-2
+      CODEDEPLOY_APP: strapi-cd-app-siya
+      CODEDEPLOY_DEPLOYMENT_GROUP: strapi-cd-dg-siya
 
-    echo "DEPLOYMENT_ID=$DEPLOYMENT_ID" >> $GITHUB_ENV
-    echo "deployment-id=$DEPLOYMENT_ID" >> $GITHUB_OUTPUT
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Register ECS Task Definition
+        id: register_taskdef
+        run: |
+          TASK_DEF_ARN=$(aws ecs register-task-definition \
+            --cli-input-json file://ecs-task-def.json \
+            --query 'taskDefinition.taskDefinitionArn' \
+            --output text)
+          echo "taskDefinitionArn=$TASK_DEF_ARN" >> $GITHUB_OUTPUT
+          echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
+
+      - name: Trigger CodeDeploy Deployment
+        run: |
+          echo "Generating AppSpecContent..."
+          APPSPEC=$(jq -n --arg taskDef "$TASK_DEF_ARN" '
+          {
+            revisionType: "AppSpecContent",
+            appSpecContent: {
+              content: "version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: \"" + $taskDef + "\"\n        LoadBalancerInfo:\n          ContainerName: \"strapi\"\n          ContainerPort: 1337"
+            }
+          }')
+
+          aws deploy create-deployment \
+            --application-name "$CODEDEPLOY_APP" \
+            --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
+            --cli-input-json "$APPSPEC" \
+            --region $AWS_REGION
 
