Fix: Final working deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,19 +37,23 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          APPSPEC=$(jq -n --arg td "$TASK_DEF_ARN" '
-          {
-            revisionType: "AppSpecContent",
-            appSpecContent: {
-              content: "version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: \"" + $td + "\"\n        LoadBalancerInfo:\n          ContainerName: \"strapi\"\n          ContainerPort: 1337"
-            }
-          }')
+          cat > appspec.yaml <<EOF
+version: 1
+Resources:
+  - TargetService:
+      Type: AWS::ECS::Service
+      Properties:
+        TaskDefinition: "${TASK_DEF_ARN}"
+        LoadBalancerInfo:
+          ContainerName: "strapi"
+          ContainerPort: 1337
+EOF
 
-          echo "$APPSPEC" > appspec.json
+          ENCODED_APPSPEC=$(base64 appspec.yaml | tr -d '\n')
 
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP" \
             --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision file://appspec.json \
+            --revision "revisionType=AppSpecContent,appSpecContent={\"content\":\"$ENCODED_APPSPEC\",\"sha256\":\"\"}" \
             --region "$AWS_REGION"
 
