--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,12 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          CONTENT="version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: \\\"$TASK_DEF_ARN\\\"\n        LoadBalancerInfo:\n          ContainerName: \\\"strapi\\\"\n          ContainerPort: 1337"
-          aws deploy create-deployment \
-            --application-name "$CODEDEPLOY_APP" \
-            --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$CONTENT\"}" \
-            --region "$AWS_REGION"
+          cat > appspec.json <<EOF
+{
+  "applicationName": "${CODEDEPLOY_APP}",
+  "deploymentGroupName": "${CODEDEPLOY_DEPLOYMENT_GROUP}",
+  "revision": {
+    "revisionType": "AppSpecContent",
+    "appSpecContent": {
+      "content": "version: 1\nResources:\n  - Target
 
