--- a/appspec.yaml
+++ b/appspec.yaml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "<TASK_DEFINITION_PLACEHOLDER>"
+        TaskDefinition: "arn:aws:ecs:us-east-2:607700977843:task-definition/strapi-task-siya:7"
         LoadBalancerInfo:
           ContainerName: "strapi"
           ContainerPort: 1337
