--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,20 +38,28 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          echo 'version: 1
-Resources:
-  - TargetService:
-      Type: AWS::ECS::Service
-      Properties:
-        TaskDefinition: "'"$TASK_DEF_ARN"'"
-        LoadBalancerInfo:
-          ContainerName: "strapi"
-          ContainerPort: 1337' > appspec.yaml
+          APP_SPEC_CONTENT=$(jq -n --arg td "$TASK_DEF_ARN" '{
+            version: "1",
+            Resources: [
+              {
+                TargetService: {
+                  Type: "AWS::ECS::Service",
+                  Properties: {
+                    TaskDefinition: $td,
+                    LoadBalancerInfo: {
+                      ContainerName: "strapi",
+                      ContainerPort: 1337
+                    }
+                  }
+                }
+              }
+            ]
+          }')
 
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP" \
             --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision file://appspec.yaml \
+            --revision "revisionType=AppSpecContent,appSpecContent=$APP_SPEC_CONTENT" \
             --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
             --region "$AWS_REGION"
 
