--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,28 +38,12 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          APP_SPEC_CONTENT=$(jq -n --arg td "$TASK_DEF_ARN" '{
-            version: "1",
-            Resources: [
-              {
-                TargetService: {
-                  Type: "AWS::ECS::Service",
-                  Properties: {
-                    TaskDefinition: $td,
-                    LoadBalancerInfo: {
-                      ContainerName: "strapi",
-                      ContainerPort: 1337
-                    }
-                  }
-                }
-              }
-            ]
-          }')
+          APP_SPEC="version: 1\nResources:\n  - TargetService:\n      Type: AWS::ECS::Service\n      Properties:\n        TaskDefinition: \\\"$TASK_DEF_ARN\\\"\n        LoadBalancerInfo:\n          ContainerName: \\\"strapi\\\"\n          ContainerPort: 1337"
 
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP" \
             --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision "revisionType=AppSpecContent,appSpecContent=$APP_SPEC_CONTENT" \
+            --revision "revisionType=AppSpecContent,appSpecContent={\"content\":\"$APP_SPEC\"}" \
             --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
             --region "$AWS_REGION"
 
