--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,13 +37,34 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          # Create AppSpec content with full escaping
-          APP_SPEC_JSON="{\"version\":\"1\",\"Resources\":[{\"TargetService\":{\"Type\":\"AWS::ECS::Service\",\"Properties\":{\"TaskDefinition\":\"$TASK_DEF_ARN\",\"LoadBalancerInfo\":{\"ContainerName\":\"strapi\",\"ContainerPort\":1337}}}}]}"
+          APP_SPEC_JSON=$(cat <<EOF
+{
+  "version": "1",
+  "Resources": [
+    {
+      "TargetService": {
+        "Type": "AWS::ECS::Service",
+        "Properties": {
+          "TaskDefinition": "$TASK_DEF_ARN",
+          "LoadBalancerInfo": {
+            "ContainerName": "strapi",
+            "ContainerPort": 1337
+          }
+        }
+      }
+    }
+  ]
+}
+EOF
+)
+
+          # Escape quotes and line breaks for AWS CLI
+          APP_SPEC_ESCAPED=$(echo "$APP_SPEC_JSON" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
 
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP" \
             --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$APP_SPEC_JSON\"}" \
+            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$APP_SPEC_ESCAPED\"}" \
             --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
             --region "$AWS_REGION"
 
