Fix: working CodeDeploy trigger

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,34 +37,26 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          APP_SPEC_JSON=$(cat <<EOF
-{
-  "version": "1",
-  "Resources": [
-    {
-      "TargetService": {
-        "Type": "AWS::ECS::Service",
-        "Properties": {
-          "TaskDefinition": "$TASK_DEF_ARN",
-          "LoadBalancerInfo": {
-            "ContainerName": "strapi",
-            "ContainerPort": 1337
-          }
-        }
-      }
-    }
-  ]
-}
+          echo "Generating AppSpec content..."
+          APP_SPEC=$(cat <<EOF
+version: 1
+Resources:
+  - TargetService:
+      Type: AWS::ECS::Service
+      Properties:
+        TaskDefinition: "$TASK_DEF_ARN"
+        LoadBalancerInfo:
+          ContainerName: "strapi"
+          ContainerPort: 1337
 EOF
 )
 
-          # Escape quotes and line breaks for AWS CLI
-          APP_SPEC_ESCAPED=$(echo "$APP_SPEC_JSON" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+          ESCAPED_CONTENT=$(echo "$APP_SPEC" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
 
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP" \
             --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$APP_SPEC_ESCAPED\"}" \
+            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$ESCAPED_CONTENT\"}" \
             --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
             --region "$AWS_REGION"
 
