Fix deploy.yml syntax

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,19 +37,20 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          APP_SPEC=$(cat <<EOF
+          APP_SPEC=$(cat <<'EOF'
 version: 1
 Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "$TASK_DEF_ARN"
+        TaskDefinition: "__TASK_DEF_ARN__"
         LoadBalancerInfo:
           ContainerName: "strapi"
           ContainerPort: 1337
 EOF
           )
 
+          APP_SPEC=${APP_SPEC/__TASK_DEF_ARN__/$TASK_DEF_ARN}
           ESCAPED_APP_SPEC=$(echo "$APP_SPEC" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
 
           aws deploy create-deployment \
